fixed nav on mobile and gallery on mobile

--- a/css/creative.css
+++ b/css/creative.css
@@ -470,6 +470,7 @@ body {
 @media only screen and (max-width: 900px)  {
   .gallery-div{
     width:49.5%;
-    display:inline-block
+    display:inline-block;
+    margin: 0px -1px;
   }
 }
